--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
 <div class="jumbotron">
     <h1>Welcome to my first app</h1>
-    <p>Click here to  <%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %></p>
+    <p><%= link_to "Sign up", "#", class: "btn btn-primary btn-lg" %> or <%= link_to "Login", "#", class: "btn btn-default btn-lg" %></p>
 </div>
