--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
   <%= render 'layouts/header' %>
   
   <div class="container">
-    <% flash.each do |name, massage| %>
-      <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+    <% flash.each do |name, msg| %>
+      <%= content_tag(:div, msg, class: "alert alert-info") %>
     <% end %>
    <%= yield %> 
   </div>
