--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,12 +1,11 @@
 
 <div class="jumbotron">
-    <h1>Welcome to my first app</h1>
+    <h1>Welcome to my app</h1>
     <% if user_signed_in? %>
         #do something
     <% else %>
     <p>
-        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %> or 
-        <%= link_to "Login", new_user_session_path, class: "btn btn-default btn-lg" %>
+        <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
     </p>
     <% end %>
     
