--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,9 +1,12 @@
+$navbar-default-bg: white;
 $navbar-default-link-color: gray;
 $navbar-default-brand-color: #446CB3;
 $navbar-default-link-hover-color: #446CB3;
 $navbar-default-link-active-color: #446CB3;
 
-$jumbotron-bg: #F2F1EF;
+$body-bg: #F2F1EF;
+
+$jumbotron-bg: white;
 
 .center {
     text-align:center;
