CSS improvements around DEVISE

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,8 +1,8 @@
 $navbar-default-bg: white;
 $navbar-default-link-color: gray;
-$navbar-default-brand-color: #446CB3;
-$navbar-default-link-hover-color: #446CB3;
-$navbar-default-link-active-color: #446CB3;
+$navbar-default-brand-color: #3A539B;
+$navbar-default-link-hover-color: #3A539B;
+$navbar-default-link-active-color: #3A539B;
 
 $body-bg: #F2F1EF;
 
