changed DEVISE views (css improvement)

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,10 +1,10 @@
 $navbar-default-bg: white;
 $navbar-default-link-color: gray;
-$navbar-default-brand-color: #3A539B;
-$navbar-default-link-hover-color: #3A539B;
-$navbar-default-link-active-color: #3A539B;
+$navbar-default-brand-color: #89C4F4;
+$navbar-default-link-hover-color: #89C4F4;
+$navbar-default-link-active-color: #89C4F4;
 
-$body-bg: #F2F1EF;
+$body-bg: #89C4F4;
 
 $jumbotron-bg: white;
 
