CSS improvements and brand-primary change

--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,10 +1,17 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:400,700);
+$font-family-sans-serif: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+$body-bg: #ECECEC;
+
+$brand-primary: #89C4F4;
+
 $navbar-default-bg: white;
 $navbar-default-link-color: gray;
 $navbar-default-brand-color: #89C4F4;
 $navbar-default-link-hover-color: #89C4F4;
 $navbar-default-link-active-color: #89C4F4;
 
-$body-bg: #89C4F4;
+
 
 $jumbotron-bg: white;
 
