--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,7 +17,7 @@
       <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "off", class: "form-control", type:"textarea" %>
+      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
     </div>
     
     <div class="form-group">
