--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,11 +1,10 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Pins</h1>
 
 <table>
   <thead>
     <tr>
       <th>Description</th>
+      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,14 +13,19 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.description %></td>
+        <td><%= pin.user.email if pin.user %></td>
         <td>&nbsp; <%= link_to 'Show', pin %> &nbsp;</td>
+        
+        <% if pin.user == current_user %>
         <td><%= link_to 'Edit ', edit_pin_path(pin) %> &nbsp;</td>
         <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Pin', new_pin_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New Pin', new_pin_path %>
+<% end %>
