--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
       <%= f.label :image %><br>
-      <%= f.file_field :description, class: "form-control" %>
+      <%= f.file_field :image, class: "form-control" %>
     </div>
     <div class="form-group">
       <%= f.submit :class =>"btn btn-primary" %>
