--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -3,8 +3,10 @@
 <table>
   <thead>
     <tr>
+      <th>Preview</th>
       <th>Description</th>
       <th>User</th>
+     
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,8 +14,10 @@
   <tbody>
     <% @pins.each do |pin| %>
       <tr>
+        <td><%= image_tag pin.image.url(:thumb) %></td>
         <td><%= pin.description %></td>
         <td><%= pin.user.email if pin.user %></td>
+        
         <td>&nbsp; <%= link_to 'Show', pin %> &nbsp;</td>
         
         <% if pin.user == current_user %>
