--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,4 +1,4 @@
-<%= image_tag @pin.image.url %>
+<%= image_tag @pin.image.url(:medium) %>
 
 <p>
   <strong>Description:</strong>
@@ -9,3 +9,4 @@
   <%= link_to 'Edit', edit_pin_path(@pin) %> |
 <% end %>
 <%= link_to 'Back', pins_path %>
+ 
