--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,3 +1,5 @@
+@import "bootstrap-sprockets";
+
 @import url(https://fonts.googleapis.com/css?family=Lato:400,700);
 $font-family-sans-serif: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 
@@ -17,6 +19,10 @@ $jumbotron-bg: white;
 
 .center {
     text-align:center;
+}
+
+a:hover{
+    text-decoration:none !important;
 }
 
 
