--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,4 +1,7 @@
 <%= render 'pages/home' unless user_signed_in? %>
+<div class="center">
+  <%= will_paginate @Pin , renderer: BootstrapPagination::Rails %>
+</div>
 
 <div id="pins" class="transitions-enabled">
   <% @pins.each do |pin| %>
