--- a/app/views/pages/_home.html.erb
+++ b/app/views/pages/_home.html.erb
@@ -1,6 +1,7 @@
 
 <div class="jumbotron center">
-    <h1>Welcome to my app</h1>
+    <h1> Welcome to <span class="appName">Pinteresting</span> !</h1>
+    <p>Much more than a pale copy of ... </p>
     <p>
         <%= link_to "Sign up", new_user_registration_path, class: "btn btn-primary btn-lg" %>
     </p>
