latest tweeks and css updates

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
 <h1>My about pages</h1>
+<br/>
+    <p>
+        This project is my first app running with Ruby on Rails => a fully fonctional Pinterest-like application.
+    </p>
