--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,40 +1,45 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title"><h2>Sign up</h2></h3>
-  </div>
-  
-  <div class="panel-body">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= devise_error_messages! %>
-  
-    <div class="form-group">
-      <%= f.label :name %><br />
-      <%= f.text_field :name, autofocus: true, class: "form-control" %>
-    </div>
+<div class="row">
+  <div class="col-md-4 col-md-offset-4">
     
-    <div class="form-group">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, class: "form-control" %>
-    </div>
-  
-    <div class="form-group">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h3 class="panel-title"><h2>Sign up</h2></h3>
+      </div>
+      
+      <div class="panel-body">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+        <%= devise_error_messages! %>
+      
+        <div class="form-group">
+          <%= f.label :name %><br />
+          <%= f.text_field :name, autofocus: true, class: "form-control" %>
+        </div>
+        
+        <div class="form-group">
+          <%= f.label :email %><br />
+          <%= f.email_field :email, autofocus: true, class: "form-control" %>
+        </div>
+      
+        <div class="form-group">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+        </div>
+        
+        <div class="form-group">
+          <%= f.submit "Sign up", class: "btn btn-primary" %>
+        </div>
+      
+      <% end %>
     
-    <div class="form-group">
-      <%= f.submit "Sign up", class: "btn btn-primary" %>
+    
+      </div>
+      <div class="panel-footer">
+        <%= render "devise/shared/links" %>
+      </div>
+    
     </div>
-  
-  <% end %>
-
-
   </div>
-  <div class="panel-footer">
-    <%= render "devise/shared/links" %>
-  </div>
-
-</div>  
+</div> 
