--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,6 +1,18 @@
-<h1>Editing Pin</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @pin %> |
-<%= link_to 'Back', pins_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+      
+      <h1>Editing Pin</h1>
+      
+      
+         <div class="form-group">
+          <p><strong>Current Pin</strong></p>
+          <%= image_tag @pin.image.url(:thumb) %>
+        </div>
+       
+        <%= render 'form' %>
+            
+        <%= link_to 'Show', @pin %> |
+        <%= link_to 'Back', pins_path %>
+        
+    </div>
+</div>
