--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Pin</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', pins_path %>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+      
+      <h1>New Pin</h1>
+      
+        <%= render 'form' %>
+        
+        <%= link_to 'Back', pins_path %>
+        
+    </div>
+</div>
